--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>au.com.tommyq.market.MatchingEngineMain</mainClass>
+                            <mainClass>au.com.tommyq.MatchingEngineMain</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
