--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -22,4 +22,4 @@
 # SOFTWARE.
 #
 
-instruments=USDCAD,2.70,3.10;EURUSD,1.70,2.10;GBPEUR,1.05,2.20
+instruments=USDCAD,2.70,3.10;EURUSD,1.70,2.10;GBPEUR,1.05,2.20;AUDUSD,0.55,0.75
